Edit: divided my code into components for reuseability

--- a/src/Components/nav/nav.css
+++ b/src/Components/nav/nav.css
@@ -1,35 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 
-html{
-    scroll-behavior: smooth;
-
-}
-
-*{
-    box-sizing: border-box;
-}
-
-
-header {
-    background-image: url("../../../restaurant-app/public/front-page-header.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: auto;
-    height: 100vh;
-
-    display: flex;
-    flex-direction: column;
-    
-}
-
-
 ul{
     list-style-type: none;
     padding: 0;
 }
 
 .navbar{
-    /* background: #000; */
     color: #fff;
     height: 70px;
 }
@@ -55,9 +31,6 @@ ul{
     margin-left: 20px;
 }
 
-/* .navbar li:hover{
-    background-color: #E46D6A;
-} */
 
 .navbar a {
     color: #fff;
@@ -74,7 +47,7 @@ ul{
     color:#fd3636;
 }
 
-header .title {
+/* header .title {
     padding-top: 50px;
     display: flex;
     justify-content: center;
@@ -105,56 +78,5 @@ header .scroll-btn{
 header .scroll-btn:hover{
     box-shadow: inset 400px 0 0 0 #fd3636;
     color: #ffee00;
-}
+} */
 
-.menu{
-    height: auto;
-    padding-bottom: 100px;
-    background-color: #fd3636;
-}
-
-.menu .menu-title{
-    padding-top: 50px;
-    font-family: 'Alfa Slab One', cursive;
-    font-size: 2.1em;
-    letter-spacing: 3px;
-    font-weight: bolder;
-    color:  #ffee00;
-    
-    text-align: center;
-}
-
-.menu .menu-container{
-    margin: 0 auto;
-    margin-top: 100px;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 80px;
-}
-
-.menu .menu-article{
-    width: 100%;
-    height: auto;
-    display: flex;
-}
-
-.menu .article-title{
-    font-family: 'Alfa Slab One', cursive;
-    font-size: 1.5em;
-    letter-spacing: 3px;
-    font-weight: bolder;
-    color:  #ffee00;
-
-}
-
-.menu img {
-    width: auto;
-    height: 350px;
-}
-
-.menu p {
-    font-family: 'Alfa Slab One', cursive;
-    letter-spacing: 2px;
-    color:  #fff;
-}
