--- a/src/Components/food-card/food-card.css
+++ b/src/Components/food-card/food-card.css
@@ -10,7 +10,7 @@
     grid-column-gap: 20px;
 }
 
-.menu-article .article-description {
+.menu-article #article-description {
     display: grid;
     grid-template-rows: auto;
     
@@ -27,44 +27,8 @@
 
 }
 
-.menu-article a{
-    margin-top: 30px;
-    padding: 10px 30px;
-    border-radius: 10px;
-    background-color: #ffee00;
-    min-width: 200px;
-    align-self: center;
-
-    text-decoration: none;
-    font-family: 'Alfa Slab One', cursive;
-    font-size: 1.2em;
-    letter-spacing: 2px;
-    text-align: center;
-    color: #fd3636;
-    border: 2px solid transparent;
-    box-shadow: inset 0 0 0 0 #fd3636;
-    transition: ease-out 0.2s;
-}
-
-.menu-article  a:hover{
-    box-shadow: inset 400px 0 0 0 #fd3636;
-    color: #ffee00;
-    border: 2px solid #ffee00;
-}
-
-#burgers-btn,  #veggies-btn {
-    justify-self: end;
-}
-
-#beers-btn, #sodas-btn{
-    justify-self: baseline;
-}
-
-
-
 .menu-article img {
-    width: auto;
-    height: 300px;
+    width: 450px;
 }
 
 .menu-article p {
