--- a/src/main-page/main-page.css
+++ b/src/main-page/main-page.css
@@ -34,7 +34,6 @@
     border-radius: 10px;
     background-color: #ffee00;
     min-width: 200px;
-    justify-self: end;
 
     text-decoration: none;
     font-family: 'Alfa Slab One', cursive;
@@ -47,6 +46,14 @@
     transition: ease-out 0.2s;
 }
 
+.more-btn-left{
+    justify-self: baseline;
+}
+
+.more-btn-right{
+    justify-self: end;
+}
+
 .menu-container a:hover{
     box-shadow: inset 400px 0 0 0 #fd3636;
     color: #ffee00;
@@ -54,9 +61,26 @@
 }
 
 
+
+
+
 @media only screen and (max-width: 1200px) {
 
     .menu .menu-title{
         font-size: 1.5em;
     }
+}
+
+@media only screen and (max-width: 800px) {
+
+    .menu .menu-title{
+        font-size: 1em;
+    }
+
+    .menu-container a{
+        justify-self: unset;
+        margin-top: 10px;
+        font-size: 1em;
+    }
+
 }
