--- a/src/Components/nav/nav.css
+++ b/src/Components/nav/nav.css
@@ -6,8 +6,11 @@ ul{
 }
 
 .navbar{
-    color: #fff;
+    position: fixed;
+    color: #fd3636;
+    width: 100%;
     height: 70px;
+    background-color: #ffee00;
 }
 
 .logo{
@@ -33,7 +36,7 @@ ul{
 
 
 .navbar a {
-    color: #fff;
+    color: #fd3636;
     font-size: larger;
     font-weight: bold;
     text-decoration: none;
@@ -44,7 +47,6 @@ ul{
 
 .navbar a:hover{
     background-color: #ffee00;
-    color:#fd3636;
 }
 
 /* header .title {
