Edit: code refactor + minor layout changes

--- a/src/Components/card/card.css
+++ b/src/Components/card/card.css
@@ -16,7 +16,7 @@
     
 }
 
-.menu .article-title{
+.menu-article .article-title{
     margin-bottom: 30px;
     align-self: center;
     font-family: 'Alfa Slab One', cursive;
