--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+
 *{
     box-sizing: border-box;
     margin: 0;
   
   }
 
-  html,body{overflow-x: hidden;}
+  html,body{
+    background-color: #fd3636;
+    overflow-x: hidden;
+  }
