--- a/src/Components/main-header/Main-header.css
+++ b/src/Components/main-header/Main-header.css
@@ -28,6 +28,7 @@ html{
 }
 
 .header .title {
+    margin-top: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,8 +41,10 @@ html{
 
 .header .scroll-btn{
     margin: 0 auto;
+    margin-top: 150px;
    
-    padding: 30px 50px; align-self:flex-start;
+    padding: 30px 50px; 
+    align-self:flex-start;
     border-radius: 10px;
     width: 300px;
     background-color: #ffee00;
