--- a/src/contact-page/contact-page.css
+++ b/src/contact-page/contact-page.css
@@ -2,6 +2,7 @@
     height: 100vh;
     padding-top:150px;
     background-color: #fd3636;
+    background-image: url("../../../restaurant-app/public/images/contactbg.png");
 }
 
 .contact-body .grid-container{
