--- a/src/main-page/main-page.css
+++ b/src/main-page/main-page.css
@@ -20,10 +20,12 @@
 .article-section .article-container{
     margin: 0 auto;
     margin-top: 100px;
+    padding: 20px;
     width: 80%;
     display: flex;
     flex-direction: column;
     row-gap: 80px;
+    background-image: url('../../public/images/TEST.png');
 }
 
 .article-container div {
