--- a/src/menu-page/menupage.css
+++ b/src/menu-page/menupage.css
@@ -2,7 +2,7 @@
     height: auto;
     padding-bottom: 100px;
     background-color: #fd3636;
-    background-image: url("../../../restaurant-app/public/images/contactbg.png")
+    background-image: url("../../../restaurant-app/public/images/contactbg.png");
 }
 
 .menu .menu-title{
@@ -29,10 +29,12 @@
 .menu .menu-container{
     margin: 0 auto;
     margin-top: 100px;
+    padding: 20px;
     width: 80%;
     display: flex;
     flex-direction: column;
     row-gap: 80px;
+    background-image: url('../../public/images/TEST.png');
 }
 
 .menu-container div {
